# hyperliquid-trading-bot

./: .cursorrules  .env.example  .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  Requirement.md  STRATEGIES.md  check_code.sh  dry_run.sh  implementation_plan.md  simulation_config.template.json
.gemini/: architecture.md  memory.md
configs/: ETH_Spot_Geometric_200_400.toml  accounts.template.toml  btc_perp.toml  eth_spot.toml  hype_spot.toml  hype_spot_geometric_20_22_10.toml  hype_spot_geometric_20_24_40.toml  hype_spot_geometric_22_25_20.toml  xx.toml
deployment/: start.sh  stop.sh
docs/: design.md
docs/api/: schema.json  websocket_events.md
docs/design/: telegram_integration.md
docs/strategies/: perp_grid.md  spot_grid.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/electron/: main.cjs
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ActivityLog.tsx  ConfigPanel.tsx  ConnectionManager.tsx  HeaderMetrics.tsx  Layout.tsx  MultiBotLayout.tsx  OrderBook.tsx  SummaryCard.tsx  Tooltip.tsx
frontend/src/context/: WebSocketContext.tsx
frontend/src/types/: connection.ts  schema.ts
frontend/src/utils/: storage.ts
src/: constants.rs  error.rs  lib.rs  main.rs  model.rs
src/broadcast/: mod.rs  server.rs  types.rs
src/config/: bot.rs  broadcast.rs  creator.rs  exchange.rs  mod.rs  simulation.rs  strategy.rs  test_secrets.rs
src/engine/: common.rs  context.rs  live.rs  mod.rs  simulation.rs
src/logging/: mod.rs  order_audit.rs
src/reporter/: telegram.rs
src/strategy/: common.rs  mod.rs  perp_grid.rs  spot_grid.rs  types.rs
src/ui/: console.rs
web-client/: package-lock.json  package.json  tsconfig.app.json
web-client/src/: index.css
web-client/src/components/: ConfigPanel.tsx  HeaderMetrics.tsx  OrderBook.tsx
web-client/src/types/: schema.ts
