[package]
name = "hyperliquid-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
hyperliquid_rust_sdk = "0.6.0"
tokio = { version = "1.48.0", features = ["full"] }
ethers = "2.0.14"
