[package]
name = "hyperliquid-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
hyperliquid_rust_sdk = "0.6.0"
tokio = { version = "1", features = ["full"] }
ethers = "2.0.14"
log = "0.4.22"
env_logger = "0.11.5"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde_json = "1.0.145"
chrono = "0.4"
tokio-tungstenite = "0.20"
futures-util = "0.3"
